maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit){
    setDirection(Direction.NORTH)
    if (estFaceMur){
      gauche()
      if (est FaceMur){
        droite()
        droite()
        avance()
      }else{
        avance()
      }
    }
  }
  prendBiscuit()
}